# tool-smith-mcp

./: CLAUDE.md  COMPREHENSIVE_DOCUMENTATION.md  FLOW.md  IMPROVEMENTS.md  README.md  pyproject.toml  tool-smith.toml
resources/initial_tools/: __init__.py  ask_ai.py  calculate_math.py  data_analyzer.py  data_processing.py  datetime_utils.py  encoding_utils.py  file_operations.py  format_text.py  html_parser.py  network_utils.py  prompt_executor.py  statistics.py  web_fetch.py  web_scraper.py
src/tool_smith_mcp/: __init__.py
src/tool_smith_mcp/core/: __init__.py  server.py  tool_manager.py
src/tool_smith_mcp/utils/: __init__.py  cache.py  claude_client.py  config.py  docker_executor.py  vector_store.py
tests/: __init__.py  conftest.py  test_cache.py  test_claude_client.py  test_claude_client_isolated.py  test_containerized_execution.py  test_docker_executor.py  test_integration.py  test_second_layer_tools.py  test_server.py  test_simple_second_layer.py  test_tool_manager.py  test_tool_manager_isolated.py  test_vector_store.py  test_vector_store_isolated.py
